# TRACK_BiManipulator

./: .gitignore  CMakeLists.txt  MatPlotLib.py  README.md  RealsensePipeline.py
gui/gui/: gui_visual_test.py
nlp_processor/: README.md  package.xml  setup.cfg  setup.py
nlp_processor/nlp_processor/: voice_command_node.py
src/: chanwoo_dxl_subscriber_groupsync.py  dxl_subscriber.py  gui.py  vision.py  vision_nk.py
