<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nlp_processor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cwcw0301@gmail.com">han</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-speech-recognition</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
